--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,7 +8,27 @@ $body-size: 14px;
 
 h1 {
     @extend .title;
-    // @extend .is-2;
+    @extend .is-2;
+}
+
+h2 {
+    @extend .title;
+    @extend .is-3;
+}
+
+h3 {
+    @extend .title;
+    @extend .is-4;
+}
+
+h4 {
+    @extend .title;
+    @extend .is-5;
+}
+
+h5 {
+    @extend .title;
+    @extend .is-6;
 }
 
 .section {
